ft. add some questions about framework